Improve error handling and update dependencies (#572)
Target branch: 4.0.x
Resolves issue #

- [ ] It is a Bug fix
- [ ] It is a New feature
- [ ] It is related to dependencies

Includes:
- [ ] Breaks BC
- [ ] Deprecations

--- a/composer.json
+++ b/composer.json
@@ -67,9 +67,9 @@
         "ext-sodium": "*",
         "ekino/phpstan-banned-code": "^1.0",
         "ergebnis/phpunit-slow-test-detector": "^2.14",
-        "infection/infection": "^0.28 || ^0.29",
+        "infection/infection": "^0.28|^0.29",
         "matthiasnoback/symfony-config-test": "^5.0",
-        "paragonie/sodium_compat": "^1.20 || ^2.0",
+        "paragonie/sodium_compat": "^1.20|^2.0",
         "php-parallel-lint/php-parallel-lint": "^1.3",
         "phpbench/phpbench": "^1.2",
         "phpstan/extension-installer": "^1.3",
@@ -80,7 +80,7 @@
         "phpstan/phpstan-strict-rules": "^1.4",
         "phpstan/phpstan-symfony": "^1.3",
         "phpunit/phpunit": "^10.5.10|^11.0",
-        "qossmic/deptrac-shim": "^1.0",
+        "qossmic/deptrac": "^2.0",
         "rector/rector": "^1.0",
         "roave/security-advisories": "dev-latest",
         "spomky-labs/aes-key-wrap": "^7.0",
