--- a/.gitattributes
+++ b/.gitattributes
@@ -8,6 +8,7 @@
 /.gitattributes export-ignore
 /.gitignore export-ignore
 /.gitsplit.yml export-ignore
+/.mergify.yml export-ignore
 /monorepo-builder.php export-ignore
 /CODE_OF_CONDUCT.md export-ignore
 /castor.php export-ignore
