Add custom exception handler and update dependencies
Added a custom exception handler in a new autoload file under the tests directory. The PHPUnit bootstrap configuration was updated to use the new autoload file. Also, the dependency 'matthiasnoback/symfony-config-test' was switched to a 'dev-phpunit-11' version and the source repository for this dependency was added under the 'repositories' section in composer.json.

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -4,7 +4,7 @@
     backupGlobals="false"
     processIsolation="false"
     stopOnFailure="false"
-    bootstrap="vendor/autoload.php"
+    bootstrap="tests/autoload.php"
     beStrictAboutTestsThatDoNotTestAnything="false"
     colors="true"
     xsi:noNamespaceSchemaLocation="vendor/phpunit/phpunit/phpunit.xsd"
