--- a/composer.json
+++ b/composer.json
@@ -68,7 +68,7 @@
         "ekino/phpstan-banned-code": "^1.0",
         "ergebnis/phpunit-slow-test-detector": "^2.14",
         "infection/infection": "^0.28|^0.29",
-        "matthiasnoback/symfony-config-test": "^5.0",
+        "matthiasnoback/symfony-config-test": "dev-phpunit-11",
         "paragonie/sodium_compat": "^1.20|^2.0",
         "php-parallel-lint/php-parallel-lint": "^1.3",
         "phpbench/phpbench": "^1.2",
@@ -117,6 +117,12 @@
             "phpstan/extension-installer": true,
             "php-http/discovery": true,
             "infection/extension-installer": false
+        }
+    },
+    "repositories": {
+        "wickedOne_SymfonyConfigTest": {
+            "type": "vcs",
+            "url": "git@github.com:wickedOne/SymfonyConfigTest.git"
         }
     }
 }
