--- a/src/Deprecated/Core/composer.json
+++ b/src/Deprecated/Core/composer.json
@@ -37,7 +37,7 @@
         "ext-json": "*",
         "ext-mbstring": "*",
         "brick/math": "^0.9|^0.10|^0.11|^0.12",
-        "paragonie/constant_time_encoding": "^2.6",
+        "paragonie/constant_time_encoding": "^2.6|^3.0",
         "spomky-labs/pki-framework": "^1.2.1",
         "web-token/jwt-library": "^3.3"
     }
