Replace PHP_EOL with "\n" in certificate processing
The PHP_EOL constant used in certificate processing has been replaced with "\n". This change impacts multiple files including KeyConverter.php, ECKey.php, and X5UFactory.php. The commit ensures consistent use of line breaks across various operating systems.

--- a/composer.json
+++ b/composer.json
@@ -90,13 +90,13 @@
         "qossmic/deptrac": "^2.0",
         "rector/rector": "^1.0",
         "roave/security-advisories": "dev-latest",
-        "symfony/browser-kit": "^6.1|^7.0",
-        "symfony/finder": "^6.1|^7.0",
-        "symfony/framework-bundle": "^6.1|^7.0",
-        "symfony/phpunit-bridge": "^6.1|^7.0",
-        "symfony/serializer": "^6.1|^7.0",
-        "symfony/var-dumper": "^6.1|^7.0",
-        "symfony/yaml": "^6.1|^7.0",
+        "symfony/browser-kit": "^5.4|^6.0|^7.0",
+        "symfony/finder": "^5.4|^6.0|^7.0",
+        "symfony/framework-bundle": "^5.4|^6.0|^7.0",
+        "symfony/phpunit-bridge": "^5.4|^6.0|^7.0",
+        "symfony/serializer": "^5.4|^6.0|^7.0",
+        "symfony/var-dumper": "^5.4|^6.0|^7.0",
+        "symfony/yaml": "^5.4|^6.0|^7.0",
         "symplify/easy-coding-standard": "^12.0"
     },
     "replace": {
