--- a/composer.json
+++ b/composer.json
@@ -53,8 +53,8 @@
         "ext-openssl": "*",
         "ext-sodium": "*",
         "brick/math": "^0.9|^0.10|^0.11|^0.12",
-        "paragonie/constant_time_encoding": "^2.6",
-        "paragonie/sodium_compat": "^1.20",
+        "paragonie/constant_time_encoding": "^2.6|^3.0",
+        "paragonie/sodium_compat": "^1.20|^2.0",
         "psr/cache": "^3.0",
         "psr/clock": "^1.0",
         "psr/event-dispatcher": "^1.0",
@@ -75,7 +75,7 @@
         "ext-gmp": "*",
         "bjeavons/zxcvbn-php": "^1.3",
         "ekino/phpstan-banned-code": "^1.0",
-        "infection/infection": "^0.27",
+        "infection/infection": "^0.29",
         "matthiasnoback/symfony-config-test": "^5.0",
         "nyholm/psr7": "^1.8",
         "php-http/mock-client": "^1.5",
@@ -86,17 +86,17 @@
         "phpstan/phpstan-deprecation-rules": "^1.0",
         "phpstan/phpstan-phpunit": "^1.1",
         "phpstan/phpstan-strict-rules": "^1.4",
-        "phpunit/phpunit": "^10.1",
-        "qossmic/deptrac-shim": "^1.0",
+        "phpunit/phpunit": "^10.1|^11.0",
+        "qossmic/deptrac": "^2.0",
         "rector/rector": "^1.0",
         "roave/security-advisories": "dev-latest",
-        "symfony/browser-kit": "^6.1|^7.0",
-        "symfony/finder": "^6.1|^7.0",
-        "symfony/framework-bundle": "^6.1|^7.0",
-        "symfony/phpunit-bridge": "^6.1|^7.0",
-        "symfony/serializer": "^6.1|^7.0",
-        "symfony/var-dumper": "^6.1|^7.0",
-        "symfony/yaml": "^6.1|^7.0",
+        "symfony/browser-kit": "^5.4|^6.0|^7.0",
+        "symfony/finder": "^5.4|^6.0|^7.0",
+        "symfony/framework-bundle": "^5.4|^6.0|^7.0",
+        "symfony/phpunit-bridge": "^5.4|^6.0|^7.0",
+        "symfony/serializer": "^5.4|^6.0|^7.0",
+        "symfony/var-dumper": "^5.4|^6.0|^7.0",
+        "symfony/yaml": "^5.4|^6.0|^7.0",
         "symplify/easy-coding-standard": "^12.0"
     },
     "replace": {
