Update gitsplit.yml workflow triggers
Changed the gitsplit workflow to trigger on every new tag and published release, instead of on every push to any branch with a ".x" suffix. It optimizes and specifies when this particular workflow should run.

--- a/.github/workflows/gitsplit.yml
+++ b/.github/workflows/gitsplit.yml
@@ -1,8 +1,10 @@
 name: gitsplit
 on:
   push:
-    branches:
-      - "*.x"
+    tags:
+      - '*'
+  release:
+    types: [published]
 
 jobs:
   gitsplit:
