--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -68,6 +68,7 @@ jobs:
         operating-system:
           - "ubuntu-latest"
         php-version:
+          - "8.2"
           - "8.3"
         dependencies:
           - "lowest"
@@ -196,7 +197,7 @@ jobs:
       - name: "Install dependencies"
         uses: "ramsey/composer-install@v3"
         with:
-          dependency-versions: "highest"
+          dependency-versions: "lowest"
           composer-options: "--optimize-autoloader"
 
       - name: "Execute Rector"
